# Automatron

./: ARCHITECTURE_ANALYSIS.md  Dockerfile  README.md  SUBMISSION_REPORT.md  app.py  evaluate.py  evaluate_agent.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  verify_requirements.py
cyber_env/: __init__.py  env.py  schemas.py  simulator.py  tasks.py
server/: __init__.py  app.py
